samples/_failures_safe/1761535610_b34685_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7a5bbad.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_d7a5bbad.c:147: error: expected ‘{’ at end of input
